# provably

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
.hypothesis/constants/: 1d9de61825e5afa0  2104e96803ac3b00  40e228e230eecc06  ab7ce78688d12271  ae993b5a7c487c8e  ba9b37fdb452975c  c2df71ce2d62c190  dbb0ca753229c930  fcc86dccb00364a8
docs/: changelog.md  faq.md  getting-started.md  index.md  self-proof.md
docs/api/: decorators.md  engine.md  lean4.md  types.md
docs/concepts/: compositionality.md  contracts.md  how-it-works.md  refinement-types.md  soundness.md
docs/guides/: errors.md  pytest.md  supported-python.md
docs/overrides/: main.html
docs/stylesheets/: custom.css
examples/: basic.py  compositionality.py  refinement_types.py  safety_critical.py
src/provably/: __init__.py  _self_proof.py  decorators.py  engine.py  hypothesis.py  lean4.py  pytest_plugin.py  translator.py  types.py
tests/: conftest.py  test_coverage_expansion.py  test_coverage_gaps.py  test_decorators_edge.py  test_disk_cache.py  test_engine.py  test_final_coverage.py  test_hypothesis_integration.py  test_integration.py  test_lean4.py  test_new_constructs.py  test_pytest_plugin.py  test_remaining_coverage.py  test_runtime_checked.py  test_self_proof.py  test_translator.py  test_translator_edge.py  test_types.py
